# multistep-outreach-sequencing-agent

./: .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md  decisions.md  provider-and-prompts.md  roadmap.md  system-behavior.md  tradeoffs.md
docs/design/: multistep-outreach-sequencing-agent-mvp.md
docs/designs/: 2026-05-29_11-42-29_multistep-outreach-sequencing-agent-mvp.md
docs/plans/2026-05-29_11-42-29_multistep-outreach-sequencing-agent-mvp/: 01-insufficient-data-webhook.md  02-hot-api-only-fake-llm.md  03-warm-scrape-fallback.md  05-llm-validation-repair.md  06-openai-openrouter-providers.md  07-fixture-scripts-and-quickstart.md  08-documentation-artifacts.md
docs/slices/: 01-insufficient-data-webhook.md  02-hot-api-only-fake-llm.md  03-warm-scrape-fallback.md  04-cold-route-and-thresholds.md  05-llm-validation-repair.md  06-openai-openrouter-providers.md  06-openai-provider.md  07-fixture-scripts-and-quickstart.md  08-documentation-artifacts.md
scripts/: run_server.sh  send_cold_fixture.sh  send_hot_fixture.sh  send_insufficient_fixture.sh  send_warm_fixture.sh
src/outreach_agent/: app.py  enrichment.py  fixtures.py  llm.py  llm_config.py  models.py  prompts.py  workflow.py
src/outreach_agent/domain/: __init__.py  models.py  prompts.py
tests/: test_app.py  test_architecture_guard.py  test_domain.py  test_integrations.py  test_llm.py  test_llm_prompts.py  test_llm_transport.py  test_llm_validation.py  test_models.py  test_protocols.py  test_real_llm_providers.py  test_workflow.py
tests/support/: fake_llm.py
(+18 files in other folders)
