[project]
name = "multistep-outreach-sequencing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "ty>=0.0.40",
]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.14"
root = ["./src", "./tests"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
output-format = "concise"
